--- a/_override.cfg
+++ b/_override.cfg
@@ -15,7 +15,7 @@ echo "---------------------------------------------------------------------"
     rate "786432"
     cl_cmdrate "128"
     cl_updaterate "128"
-    cl_interp "0"
+    cl_interp "0.031000"
     cl_interpolate "1"
     cl_interp_ratio "1"
     cl_lagcompensation "1"
@@ -29,16 +29,16 @@ echo "---------------------------------------------------------------------"
         cl_hud_color "4"
 
     // rader
-        cl_hud_radar_scale "0.75"
-        cl_radar_scale "0.3"
-        cl_radar_rotate "1"
         cl_radar_always_centered "1"
+        cl_radar_scale "0.7"
+        cl_hud_radar_scale "1"
+        cl_radar_icon_scale_min "0.6"
+        cl_radar_rotate "1"
         cl_radar_square_with_scoreboard "1"
 
     // graphics
         fps_max "999"
         fps_max_menu "120"
-        mat_monitorgamma "2.0"
         r_drawtracers_firstperson "1"
 
 // crosshair
@@ -155,6 +155,8 @@ echo "---------------------------------------------------------------------"
             bind "4" "slot10"
             // c4
             bind "1" "slot5"
+            // healthshot
+            bind "h" "slot12"
 
         // screen controll
             // open score board
